--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,19 @@
 # Learn more about .gitignore:
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
+# target binary
+http_server
+console.cgi
+
+# vscode file
+.vscode
+
+# directory for this project
+/user_pipe
+
+# bin for this project
+/bin
+
 # Node artifact files
 node_modules/
 dist/
