--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 # Learn more about .gitignore:
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
+# for testing
+/work_dir
+
 # target binary
 http_server
 console.cgi
